<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.example.vaibhav.simpleblogapp.ShowActivity.LoginActivity">

    <EditText
        android:id="@+id/loginemailfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/e_mail_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/loginpasswordfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginemailfield"
        android:layout_margin="10dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginpasswordfield"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/input_outline2"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:text="@string/or_dash" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/fbimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/google_sign_in"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_google" />
    </LinearLayout>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/t_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <Button
        android:id="@+id/newaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t_login_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/input_outline2"
        android:text="@string/need_new_account"
        android:textColor="@android:color/white" />
</RelativeLayout>
